add list for network printers
